event alignment fixed

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -111,6 +111,12 @@ body {
 .event-date-path{
     width: 70px;
 }
+.event-item-list{
+    min-height: 200px;
+}
+.event-item-description{
+    min-height: 44px;
+}
 .event-icons{
     height: 26px;
 }
